src/styles/brackets.less
/* ... */
// moved this out of #editor-holder because we need to lower the specificity so theme authors can override the background color
.not-editor {
    height: 100%;
    .vbox;
    .box-pack(center);
    .box-align(center);
    background: #f8f8f8 url('images/no_content_bg.svg') no-repeat center 45%;

    .dark & {
        background: #1d1f21 url('images/no_content_bg_dark.svg') no-repeat center 45%;
    }
}

// Split View Separator Styles
.split-vertical #second-pane {
    border-left: 1px solid rgba(0, 0, 0, 0.17);
    .dark & {
        border-left: 1px solid rgba(255, 255, 255, 0.3);
    }
}

.split-horizontal #second-pane {
    border-top: 1px solid rgba(0, 0, 0, 0.17);
    .dark & {
        border-top: 1px solid rgba(255, 255, 255, 0.3);
    }
}

.vert-resizer {
    position: absolute;
    height: 6px;
    width: 100%;
    z-index: @z-index-brackets-panel-resizer;
    opacity: 0;
    cursor: row-resize;
}

.horz-resizer {
    position: absolute;
    height: 100%;
    width: 6px;
    z-index: @z-index-brackets-panel-resizer;
    opacity: 0;
    cursor: col-resize;
}

@keyframes fadeInFromNone {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.horz-resizer:hover {
    background-color: @bc-primary-btn-bg;
    opacity: 1;
    animation: fadeInFromNone 0.5s ease-out;
}

.vert-resizer:hover {
    background-color: @bc-primary-btn-bg;
    opacity: 1;
    animation: fadeInFromNone 0.5s ease-out;
}

.bottom-panel {
    background-color: @bc-panel-bg;
    display: none;
    height: 200px;
    border-top: 1px solid @bc-panel-border;

    .dark & {
        background-color: @dark-bc-panel-bg;
        border-top: 1px solid @dark-bc-panel-border;
    }

    .check-all {
        margin: 7px 15px 7px 7px;
    }

    .toolbar {
        background-color: @bc-panel-bg-promoted;
        border-bottom: @bc-panel-separator;
        height: auto;
        padding-top: (@base-padding / 2);
        padding-bottom: (@base-padding / 2);
        z-index: @z-index-brackets-results-panel;
        box-shadow: inset 0 1px 0 @bc-highlight-hard, 0 -1px 3px @bc-shadow-small;

        .dark & {
            background-color: @dark-bc-panel-bg-promoted;
            border-bottom: @dark-bc-panel-separator;
            box-shadow: inset 0 1px 0 @dark-bc-highlight, 0 -1px 3px @dark-bc-shadow-small;
        }

        .title {
            color: @bc-text;
            font-size: @label-font-size;
            font-weight: @font-weight-semibold;

            .dark & {
                color: @dark-bc-text;
            }
        }
        .close {
            position: absolute;
            right: 10px;
            top: 50%;
            margin-top: -10px;
        }
    }

    .table-container {
        height: 170px;
        overflow: auto;

        .highlight {
            background: @bc-panel-bg-text-highlight;
            border-radius: 2px;

            .dark & {
                background: @dark-bc-panel-bg-text-highlight;
            }
        }

        tr.selected td {
            background-color: @bc-panel-bg-selected-table;
            color: @bc-text-thin;

            .dark & {
                background-color: @dark-bc-panel-bg-selected-table;
                color: @dark-bc-text-thin;
            }
        }
    }
}

.bottom-panel-table {
    td {
        font-size: 14px;
        padding-left: 15px;
        padding-right: 0;
        vertical-align: baseline;
    }

    .file-section > .checkbox-column {
        width: 15px;
    }

    .line-number {
        color: @bc-text-thin-quiet;
        font-family: @sourceFontFamily;
        font-size: 11px;
        padding: 4px 0 0 15px;
        text-align: right;
        white-space: nowrap;
        width: 5px;

        .dark & {
            color: @dark-bc-text-thin-quiet;
        }
    }

    .dialog-filename {
        font-size: 13px;
        font-weight: @font-weight-semibold;
    }

    .dialog-path {
        font-size: 11px;
        font-weight: normal;
    }

    .line-text {
        width: 100%;
    }
}


#update-notification {
    .sprite-icon(0, 0, 24px, 24px, "images/updateSprites.svg");
    &.update-in-progress {
        .sprite-icon(0, 0, 24px, 24px, "images/updateSpritesGrayed.svg");
    }
}

#toolbar-go-live {
    // background-position is 0 0 for 24x24 icons
    // Default icon is for the 'disconnected' state
    // The 'connecting failed' (.warning) state also maps here
    .sprite-icon(0, 0, 24px, 24px, "images/live_development_sprites.svg");
    // 'Connected' state
    &.success {
        .sprite-swap(0, 24px);
    }
    // 'Connection in progress' state
    &.info {
        .sprite-swap(0, 48px);
    }
    // 'Out-of-sync' state
    &.out-of-sync {
        .sprite-swap(0, 72px);
    }
    // 'sync-error'
    &.sync-error {
        .sprite-swap(0, 96px);
    }
}

#toolbar-extension-manager {
    .sprite-icon(0, 0, 24px, 24px, "images/extension-manager-sprite.svg");
    &.updatesAvailable {
        .sprite-icon(0, 24px, 24px, 24px, "images/extension-manager-sprite.svg");
    }
}

/* Project panel */

#working-set-list-container {
    background: @bc-sidebar-bg;
    display: block;

    > div:last-child ul {
        padding-bottom: 21px; // Adds working set bottom padding to the last UL.
    }
}

#working-set-list-container.working-set-hidden {
    display: none !important;
}

.working-set-header {
    position: relative;
    height: 19px;
    padding: 10px 0 9px 12px;
    background: @bc-sidebar-bg;
    color: @project-panel-text-2;
    text-shadow: none;
    overflow: hidden;

    > span {
        background: @bc-sidebar-bg;
        position: relative;
        z-index: 9;
    }

    > div {
        background-color: @dark-bc-sidebar-bg;
        opacity: 1;
    }
}

#mainNavBar {
    height: var(--toolbar-height);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#mainNavBarLeft {
    float: left;
    display: flex;
}

#mainNavBarRight {
    float: right;
    display: flex;
}
/* ... */

